[tool.poetry]
name = "cumulio"
version = "0.1.5"
description = "Cumulio Python SDK for the Core API"
authors = ["Tuana Celik <tuana@cumul.io>"]
readme = "README.md"
homepage = "https://github.com/cumulio/cumulio-sdk-python"
repository = "https://github.com/cumulio/cumulio-sdk-python"
exclude = ["test/*"]
include = ["LICENSE"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "cumulio"}
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
