[tool.poetry]
name = "luzmo"
version = "0.2.3"
description = "Luzmo Python SDK for the Core API"
authors = ["Luzmo team <support@luzmo.com>"]
readme = "README.md"
homepage = "https://github.com/luzmo/luzmo-sdk-python"
repository = "https://github.com/luzmo/luzmo-sdk-python"
exclude = ["test/*"]
include = ["LICENSE"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
    { include = "luzmo"}
]

[tool.poetry.scripts]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
